# scrape_em_all

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scrape_em_all/: bot.py  config.py  helpers.py  models.py  scraper.py  tasks.py
tests/: test_scrape_em_all.py
