[tool.poetry]
name = "scrape_em_all"
version = "0.1.0"
description = ""
authors = ["Valentyn Slivko <metallistvalon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.21"
celery = "^5.2.7"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
